--- a/index.html
+++ b/index.html
@@ -1,32 +1,19 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<link rel="stylesheet" href="style.css" type="text/css">
-<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type">
-<link rel="Start" href="index.html">
-<link title="Index of types" rel=Appendix href="index_types.html">
-<link title="Index of values" rel=Appendix href="index_values.html">
-<link title="Index of modules" rel=Appendix href="index_modules.html">
-<link title="Hvsock" rel="Chapter" href="Hvsock.html">
-<link title="Lwt_hvsock" rel="Chapter" href="Lwt_hvsock.html"><title></title>
-</head>
-<body>
-<h1></h1>
-<ul class="indexlist">
-<li><a href="index_types.html">Index of types</a></li>
-<li><a href="index_values.html">Index of values</a></li>
-<li><a href="index_modules.html">Index of modules</a></li>
-</ul>
-<br/><br>
-<table class="indextable">
-<tr><td class="module"><a href="Hvsock.html">Hvsock</a></td><td><div class="info">
-Any partition
-</div>
-</td></tr>
-<tr><td class="module"><a href="Lwt_hvsock.html">Lwt_hvsock</a></td><td><div class="info">
-A Hyper-V socket
-</div>
-</td></tr>
-</table>
-</body>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>index</title>
+    <link rel="stylesheet" href="./odoc.css"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  </head>
+  <body>
+    <main class="content">
+      <div class="by-name">
+      <h2>OCaml package documentation</h2>
+      <ol>
+      <li><a href="hvsock/index.html">hvsock</a> <span class="version">3.0.0</span></li>
+      </ol>
+      </div>
+    </main>
+  </body>
 </html>
