--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="hvsock/index.html">hvsock</a> <span class="version">3.0.0</span></li>
+      <li><a href="hvsock/index.html">hvsock</a> <span class="version">2.0.0-16-g6b90ba4</span></li>
       </ol>
       </div>
     </main>
